# loan_analysis_toolkit

./: LICENSE  README.md  build_docs.sh  pyproject.toml
.github/workflows/: publish.yml
_build/logs/: myst.build.json
docs/: api_reference.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: api_reference.md  examples.ipynb
examples/: offset_and_extra_repayments.py
loan_analysis_toolkit/: __init__.py  schedule.py  utils.py
notebook/: _config.yml  _toc.yml  api_reference.md  examples.ipynb  index.md  myst.yml
tests/: smoke_test.py  test_calculate_daily_interest.py  test_prepare_loan_summary.py
